<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.grinnell.fancy.SignUp">

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/heading_margin"

        android:textSize="@dimen/heading_text_size"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/signup_heading"
        />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="@dimen/field_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpText"
        android:layout_alignLeft="@id/signUpText"
        android:layout_margin="@dimen/field_margin"

        android:inputType="text"
        android:hint="@string/username_field"
        />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="@dimen/field_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameField"
        android:layout_alignLeft="@id/signUpText"
        android:layout_margin="@dimen/field_margin"

        android:inputType="textPassword"
        android:hint="@string/password_field"
        />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="@dimen/field_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordField"
        android:layout_alignLeft="@id/signUpText"
        android:layout_margin="@dimen/field_margin"

        android:inputType="textEmailAddress"
        android:hint="@string/email_field"
        />

    <Button
        android:id="@+id/signUpNowButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/button_bottom_margin"
        android:layout_centerHorizontal="true"

        android:background="@color/colorPrimaryDark"
        android:text="@string/signup_now_button"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/button_text_size"
        />

</RelativeLayout>
